network/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat-network-rules
spec:
  rules:
  - host: chatty-ingress.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: chat-web-service
          servicePort: 80
      - path: /redis
        backend:
          serviceName: chat-redis-service
          servicePort: 80
      - path: /socket
        backend:
          serviceName: chat-socket-service
          servicePort: 80
